unpackaged/objects/Hotel__c.object
<CustomObject>
    <fields>
        <fullName>Check_In__c</fullName>
        <label>Check In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_Out__c</fullName>
        <label>Check Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Los Angeles</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oakland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minneapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Paul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloomington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rochester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakeville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn Park</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rooms__c</fullName>
        <label>Rooms</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Hotel</label>
    <nameField>
        <label>Hotel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <recordTypes>
        <fullName>California_User</fullName>
        <active>true</active>
        <description>Displays Cities Available in California only.</description>
        <label>California User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Minnesota_User</fullName>
        <active>true</active>
        <description>Displays Cities Available in Minnesota only.</description>
        <label>Minnesota User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TestNewValidationRule</fullName>
        <active>true</active>
        <description>Modified</description>
        <errorConditionFormula>LastModifiedBy.FirstName != &apos;pavan&apos;</errorConditionFormula>
        <errorMessage>Please select room correctly</errorMessage>
    </validationRules>
</CustomObject>